--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "commander": "^7.0.0",
     "cross-spawn": "^7.0.3",
     "download-git-repo": "^3.0.2",
+    "eslint": "^7.19.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "inquirer": "^7.3.3",
     "log-symbols": "^4.0.0",
     "ora": "^5.3.0"
-  }
+  },
+  "dependencies": {}
 }
